# cmdroid_git

./: Cargo.toml
.github/workflows/: release.yml
scripts/: build.py
src/: main.rs
