[package]
name = "cmdroid_git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.18.3", features = ["vendored-libgit2"] }
openssl = { version = "0.10.64", features = ["vendored"] }
